app/assets/scss/_case-status.scss
.status-new {
  color: $green;
  font-weight: 700;
}

.case-status {

  ul {
    position: relative;
    list-style: none;
    margin: 0;
    padding: 0;

    li {
      position: relative;
      margin: 0 0 1em 0;
      padding: .1em 0 .25em 2em;

      &:before {
        content: ' ';
        position: absolute;
        left: 0;
        top: 0;
        display: block;
        width: 1.5em;
        height: 1.5em;
        border-radius: 100%;
        background-color: $grey-3;
      }
    }

    .nil {
      &:link {
        color: $grey-1;
      }
      &:visited {
        color: $grey-1;
      }
      &:hover,
      &:focus {
        color: $black;
      }
    }
  }
}

